--- a/frontend/bootmod.css
+++ b/frontend/bootmod.css
@@ -1,1 +1,24 @@
 body { min-height: 100vh; }
+
+.bg-super-dark { background: #202020; }
+
+.noselect {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+  -webkit-appearance: textfield;
+  appearance: textfield;
+}
+
+input[type="number"]:focus {
+  -moz-appearance: number-input;
+  -webkit-appearance: number-input;
+  appearance: number-input;
+}
